--- a/src/pages/netlify-forms.astro
+++ b/src/pages/netlify-forms.astro
@@ -64,11 +64,12 @@ import Layout from '../components/layout.astro';
   <main>
     <h2 class="heading">Make this form functional</h2>
 
-    <form
+        <form
       class="form"
       method="POST"
       name="contact"
       action="/success"
+      data-netlify="true"
     >
       <label htmlFor="name">Name</label>
       <input type="text" id="name" name="name" />
